fix: overflow-x on slider-nav-inner and remove unnecessary console.log

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    overflow-x: hidden;
 }
 
 .nav{
@@ -206,7 +207,7 @@
     width: 100%; 
     display: flex;
     flex-direction: row;
-    /* overflow: hidden; */
+    overflow-x: visible;
     position: absolute;
     top: 0; 
     left: 0; 
